feat: added executable file files-and-folder-to-web in a bin

--- a/package.json
+++ b/package.json
@@ -1,8 +1,11 @@
 {
-  "name": "extractfileandfolder",
+  "name": "files-and-folder-to-web",
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
+  "bin": {
+    "files-and-folder-to-web": "index.js"
+  },
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
