--- a/package.json
+++ b/package.json
@@ -2,7 +2,8 @@
   "name": "files-and-folders-to-web",
   "version": "1.0.0",
   "description": "",
-  "main": "index.js",
+  "main": "./index.js",
+  "type": "module",
   "bin": {
     "files-and-folders-to-web": "index.js"
   },
@@ -13,7 +14,6 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "cli-spinner": "^0.2.10",
     "colors": "^1.4.0",
     "yargs": "^17.7.2"
   }
